1、把Examples下文件夹都做了option的配置 2、添加了vtkbool的example和碰撞检测的example 3、修改了volumerendering不应用colortransferfunction,加上了gradienttransferfunction，并修复了原来切换mapper后没有设置blendmode的问题

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,16 @@ set(PROJECTION_NAME DicomViewer)
 
 project(${PROJECTION_NAME})
 include(GenerateExportHeader)
+#设置平台位数版本
+if(NOT CMAKE_GENERATOR_PLATFORM)
+    set(CMAKE_GENERATOR_PLATFORM "x64" CACHE STRING "Platform for generator" FORCE)
+endif()
+file(COPY ${CMAKE_SOURCE_DIR}/dependence/script/postEvent.bat DESTINATION ${CMAKE_BINARY_DIR})
 set(CMAKE_CXX_STANDARD 17)
 set(MODULE_NAME_DEFAULTS_TO_DIRECTORY_NAME 1)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 set(MODULES_PACKAGE_DEPENDS_DIRS ${CMAKE_SOURCE_DIR}/cmake/packagedepends)
 set_property( GLOBAL PROPERTY USE_FOLDERS ON)
-
-option(DicomViewer_BUILD_Examples "Enable Build Examples" OFF)
-mark_as_advanced(DicomViewer_BUILD_Examples)
-option(DicomViewer_BUILD_ "Enable Build _" OFF)
-mark_as_advanced(DicomViewer_BUILD_)
 
 add_subdirectory(src)
 
