--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,11 @@ add_subdirectory(Applications)
 add_subdirectory(Modules)	
 add_subdirectory(Plugins)	
 
-if(${DicomViewer_BUILD_Examples})
-    add_subdirectory(Examples)
-endif()
+file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/Examples ${CMAKE_CURRENT_SOURCE_DIR}/Examples/*)
+foreach(subdir ${SUBDIRS})
+    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Examples/${subdir} AND  EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Examples/${subdir}/CMakeLists.txt)
+        option(DicomViewer_BuildExample_${subdir} "Build ${child}" OFF)
+        mark_as_advanced(DicomViewer_BuildExample_${subdir})
+    endif()
+endforeach()
+add_subdirectory(Examples)
