--- a/src/Examples/AxesActorAndVolume/CMakeLists.txt
+++ b/src/Examples/AxesActorAndVolume/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 
-PROJECT(BoolTest)
+PROJECT(AxesActorAndVolume)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 FIND_PACKAGE(VTK REQUIRED)
