1、修改mpr demo的名字 2、添加动态画线的demo(在该实例中使用vtkPointPicker拾取点会导致移动鼠标时对点的采样很少，而使用vtkcellpicker时则是正常的)

--- a/src/Applications/testMPR/CMakeLists.txt
+++ b/src/Applications/testMPR/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22)
-project(testviewer LANGUAGES CXX)
+project(testMPR LANGUAGES CXX)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
