1、添加2个版本的DRRGenerator,其中DRRGenerator2也就是以itk算法运行的速度在20ms左右而前者在120ms左右

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,14 @@ include(tidy_folder)
 #endforeach()
 add_subdirectory(Applications)	
 add_subdirectory(Modules)	
+
+file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/Plugins ${CMAKE_CURRENT_SOURCE_DIR}/Plugins/*)
+foreach(subdir ${SUBDIRS})
+    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Plugins/${subdir} AND  EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Plugins/${subdir}/CMakeLists.txt)
+        option(DicomViewer_BuildPlugins_${subdir} "Build ${child}" OFF)
+        mark_as_advanced(DicomViewer_BuildPlugins_${subdir})
+    endif()
+endforeach()
 add_subdirectory(Plugins)	
 
 file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/Examples ${CMAKE_CURRENT_SOURCE_DIR}/Examples/*)
