添加三维切片视图的另一种实现方式

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,13 +12,15 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(tidy_folder)
+include(set_to_default_project_name)
 
-#file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
-#foreach(subdir ${SUBDIRS})
-#    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt)
-#        add_subdirectory(${subdir})
-#    endif()
-#endforeach()
+file(GLOB SUBDIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/Applications ${CMAKE_CURRENT_SOURCE_DIR}/Applications/*)
+foreach(subdir ${SUBDIRS})
+    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Applications/${subdir} AND  EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Applications/${subdir}/CMakeLists.txt)
+        option(DicomViewer_BuildApplications_${subdir} "Build ${child}" OFF)
+        mark_as_advanced(DicomViewer_BuildApplications_${subdir})
+    endif()
+endforeach()
 add_subdirectory(Applications)	
 add_subdirectory(Modules)	
 
