1、添加mitkwidgetbase接口 2、添加了使用mitkwidgetbase创建的qmitkstdmultiwidget的示例

--- a/src/Modules/Core/CMakeLists.txt
+++ b/src/Modules/Core/CMakeLists.txt
@@ -1,5 +1,7 @@
+find_package(MITK REQUIRED)
 create_module(
-  PACKAGE_DEPENDS
+DEPENDS MitkCore MitkQtWidgets
+PACKAGE_DEPENDS
     PRIVATE VTK ITK
 )
 add_definitions(-DITK_IO_FACTORY_REGISTER_MANAGER)
